--- a/secao_03/index.html
+++ b/secao_03/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estrutura de uma página web - parte 1</title>
-</head>
-<body>
-  
-</body>
+
+<html>
+
+  <head>
+    <title>Meu site</title>
+  </head>
+
+  <body>
+    Meu primeiro site  
+  </body>
+
 </html>
